# conway-s-game-of-life

./: CMakeLists.txt  Makefile  README.md
src/: main.c
